@startuml

title __ITEM's Class Diagram__\n

  namespace joc {
    namespace item {
      class joc.item.Heart {
          + Heart()
          + draw()
          + update()
          - checkPlayerCollision()
      }
    }
  }
  

  namespace joc {
    namespace item {
      abstract class joc.item.Item {
          {static} # FRAME_STOP_LIMIT : int
          {static} # Y_VELOCITY_FRAME_INCREASE : float
          {static} # Y_VELOCITY_THRESHOLD : float
          # sprite : BufferedImage
          # timeout : int
          # toBeDeSpawned : boolean
          # up : boolean
          # x : float
          # y : float
          # yVelocity : float
          {static} - gameWorldItems : List<Item>
          {abstract} + draw()
          {static} + getGameWorldItems()
          + isToBeDeSpawned()
          {abstract} + update()
          # Item()
          # animate()
      }
    }
  }
  

  namespace joc {
    namespace item {
      class joc.item.Key {
          + Key()
          + draw()
          + update()
          - checkPlayerCollision()
      }
    }
  }
  

  joc.item.Heart -up-|> joc.item.Item
  joc.item.Item o-- joc.player.Player : player
  joc.item.Item o-- joc.assets.SpriteSheet : sheet
  joc.item.Key -up-|> joc.item.Item


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
